# mistery-assignments

./: .gitignore  CMakeLists.txt  README.md  dev-misc.md
ocr/: ocr.sh
ocr/bash/: 1.png.txt  2.png.txt  3a.png.txt  3b.png.txt  4.png.txt  5.png.txt  6a.png.txt  6b.png.txt  7a.png.txt  7b.png.txt  8a.png.txt  8b.png.txt  9a.png.txt  9b.png.txt
ocr/java/: 10a.png.txt  10b.png.txt  11.png.txt  12a.png.txt  12b.png.txt  13.png.txt  14a.png.txt  14b.png.txt  1a.png.txt  1b.png.txt  2.png.txt  3a.png.txt  3b.png.txt  4.png.txt  5.png.txt  6.png.txt  7.png.txt  8.png.txt  9a.png.txt  9b.png.txt
ocr/python/: 1.png.txt  10.png.txt  11.png.txt  12.png.txt  13.png.txt  2.png.txt  3.png.txt  4a.png.txt  4b.png.txt  5a.png.txt  5b.png.txt  6.png.txt  7.png.txt  8.png.txt  9.png.txt
src/: README.md  atomic-async.cpp  atomic-winner.cpp  fibonacci.py  main-pimpl.cpp  monte-carlo.cpp  par-ser-race.cpp  perceptron.cpp  pimpl.cpp  pimpl.hpp  please-describe-me.cpp  tree-search.cpp
src/old/: binarytree.c  chararithm.c  chararithm.cpp  guess-string-1.c  index.txt  mut.cpp  my.txt  warnings.c
